--- a/description-ai-frontend-site/package.json
+++ b/description-ai-frontend-site/package.json
@@ -17,8 +17,13 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
 }
