--- a/description-ai-frontend-site/package.json
+++ b/description-ai-frontend-site/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth20": "^2.0.11",
     "next": "12.3.0",
+    "next-connect": "^0.13.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
