--- a/description-ai-frontend-site/package.json
+++ b/description-ai-frontend-site/package.json
@@ -12,6 +12,7 @@
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth20": "^2.0.11",
     "next": "12.3.0",
+    "next-auth": "^4.12.0",
     "next-connect": "^0.13.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
