--- a/description-ai-frontend-site/package.json
+++ b/description-ai-frontend-site/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth20": "^2.0.11",
+    "firebase": "^9.10.0",
     "next": "12.3.0",
     "next-auth": "^4.12.0",
     "next-connect": "^0.13.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
